<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/some_id"
    android:layout_width="1121px"
    android:layout_height="1148px"
    android:clipToOutline="true"
    android:background="@drawable/new_size"
    >

    <!-- 알림 -->
    <TextView
        android:id="@+id/alertTitle5"
        android:layout_width="901px"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="110px"
        android:layout_alignParentRight="true"
        android:layout_marginRight="110px"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55px"
        android:text="@string/alertTitle"
        android:textAppearance="@style/alertTitle"
        android:lineSpacingExtra="0sp"
        android:gravity="center_horizontal|center_vertical"
        android:fontFamily="@font/rowdies"
        />

    <!-- Line 13 -->
    <View
        android:id="@+id/line_13"
        android:layout_width="1121px"
        android:layout_height="3px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/line_13" />

    <!-- 요청 거절 txt. -->
    <TextView
        android:id="@+id/reject_txt"
        android:layout_width="1119px"
        android:layout_height="110px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="501px"
        android:layout_marginRight="1px"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="52sp"
        android:text="@string/reject_txt"
        android:textAppearance="@style/reject_txt"
        android:fontFamily="@font/rowdies"/>

    <Button
        android:id="@+id/to_main1"
        android:layout_width="498px"
        android:layout_height="154px"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="311px"
        android:layout_alignParentRight="true"
        android:layout_marginRight="311px"
        android:layout_alignParentTop="true"
        android:layout_marginTop="777px"
        android:background="@drawable/to_main"
        android:text="@string/to_main"
        android:textAppearance="@style/to_main"
        android:elevation="16px"
        android:fontFamily="@font/nunito"/>



</RelativeLayout>