<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/android_log"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/android_log"
    >

    <TextView
        android:id="@+id/login_txt"
        android:layout_width="1084px"
        android:layout_height="194px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="153px"
        android:layout_marginTop="596px"
        android:layout_marginRight="239px"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/login_txt"
        android:textAppearance="@style/login_txt"
        android:fontFamily="@font/roundbold"/>

    <!-- box -->
    <View
        android:id="@+id/box"
        android:layout_width="1135px"
        android:layout_height="220px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="153px"
        android:layout_marginTop="926px"
        android:layout_marginRight="152px"
        android:layout_marginBottom="1812px"
        android:background="@drawable/box" />

    <!-- Placeholder -->
    <TextView
        android:id="@+id/placeholder1"
        android:layout_width="1083px"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="185px"
        android:layout_marginTop="990px"
        android:layout_marginRight="192px"
        android:layout_marginBottom="1855px"
        android:fontFamily="@font/nunito"
        android:gravity="center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/placeholder1"
        android:textAppearance="@style/placeholder1" />

    <!-- box -->
    <View
        android:id="@+id/box2"
        android:layout_width="1135px"
        android:layout_height="220px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="153px"
        android:layout_marginTop="1186px"
        android:layout_marginRight="152px"
        android:layout_marginBottom="1550px"
        android:layout_alignParentBottom="true"
        android:background="@drawable/box"
        />

    <TextView
        android:id="@+id/placeholder2"
        android:layout_width="1083px"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="185px"
        android:layout_alignParentRight="true"
        android:layout_marginRight="192px"
        android:layout_alignParentTop="true"
        android:layout_marginTop="1260px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1630px"
        android:text="@string/placeholder2"
        android:textAppearance="@style/placeholder2"
        android:lineSpacingExtra="0sp"
        android:gravity="center_vertical"
        />


    <Button
        android:id="@+id/button_cont"
        android:layout_width="1135px"
        android:layout_height="220px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="153px"
        android:layout_marginTop="1545px"
        android:layout_marginRight="152px"
        android:background="#05507D"
        android:elevation="20dp" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="1103px"
        android:layout_height="100px"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="185px"
        android:layout_alignParentRight="true"
        android:layout_marginRight="184px"
        android:layout_centerVertical="true"
        android:text="@string/login_button"
        android:textAppearance="@style/login_button"
        android:lineSpacingExtra="0sp"
        android:gravity="center_horizontal|center_vertical"
        />














</RelativeLayout>