<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"
    android:background="@drawable/main_background"
    >

    <!-- 발송하기 -->
    <TextView
        android:id="@+id/send_txt"
        android:text="@string/send_txt"
        android:textAppearance="@style/send_bnt"
        android:layout_width="514px"
        android:layout_height="100px"
        android:layout_alignTop="@+id/send_btn"
        android:layout_alignLeft="@+id/send_btn"
        android:layout_alignRight="@+id/send_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="67dp"
        android:layout_marginRight="226dp"
        android:gravity="center_horizontal|center_vertical"
        android:fontFamily="@font/nunito"
        />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="546px"
        android:layout_height="562px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="136px"
        android:layout_marginTop="803px"
        android:layout_marginRight="758px"
        android:background="@drawable/send_btn"
        android:elevation="4px" />

    <!-- 수령확인 -->
    <TextView
        android:id="@+id/receive_txt"
        android:layout_width="514px"
        android:layout_height="100px"
        android:layout_alignTop="@+id/receive_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="774px"
        android:layout_marginTop="67dp"
        android:layout_marginRight="152px"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="0sp"
        android:text="@string/receive_txt"
        android:textAppearance="@style/receive_txt"
        android:fontFamily="@font/nunito"/>

    <Button
        android:id="@+id/receive_btn"
        android:layout_width="546px"
        android:layout_height="562px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="758px"
        android:layout_marginTop="803px"
        android:layout_marginRight="136px"
        android:background="@drawable/receive_btn"
        android:elevation="4dp" />


    <!-- 배송확인 -->
    <Button
        android:id="@+id/send_check_btn"
        android:layout_width="1168px"
        android:layout_height="229px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="136px"
        android:layout_marginTop="1494px"
        android:layout_marginRight="136px"
        android:background="@drawable/send_check_btn"
        android:text="@string/send_check_txt"
        android:textAppearance="@style/send_check_txt"
        android:elevation="4dp"
        android:fontFamily="@font/nunito"/>
</RelativeLayout>